Fix nav menu on IOS Safari

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -69,6 +69,7 @@ nav ul {
     justify-content: space-around;
     align-items: center;
     clip-path: circle(0px at 90% -10%);
+    -webkit-clip-path: circle(0px at 90% -10%);
     transition: all 0.7s ease-out;
     pointer-events: none;
     z-index: 1;
@@ -76,6 +77,7 @@ nav ul {
 
 .nav-links.open {
     clip-path: circle(3400px at 90% -10%);
+    -webkit-clip-path: circle(3400px at 90% -10%);
     pointer-events: all;
 }
 
